[package]
name = "http_stress_test"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
colored = "3.0.0"
ctrlc = "3.4.5"
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7.13"
